force-app/main/default/objects/PlacesFromPostalCode__c/PlacesFromPostalCode__c.object-meta.xml
<CustomObject>
    <description>This Object used to hold the postal codes, country and its places</description>
    <label>Places From Postal Code</label>
    <nameField>
        <displayFormat>PFPO-{0000000}</displayFormat>
        <label>Places  From Postal Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Places From Postal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>