force-app/main/default/objects/PlacesFromPostalCode__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>This used to hold the external Id</description>
    <externalId>true</externalId>
    <inlineHelpText>This used to hold the external Id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>