force-app/main/default/objects/PlacesFromPostalCode__c/fields/PlaceLocation__c.field-meta.xml
<CustomField>
    <fullName>PlaceLocation__c</fullName>
    <description>This used to hold the latitude and longitude of the place</description>
    <inlineHelpText>This used to hold the latitude and longitude of the place</inlineHelpText>
    <label>Place Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>