force-app/main/default/objects/PlacesFromPostalCode__c/fields/PlaceName__c.field-meta.xml
<CustomField>
    <fullName>PlaceName__c</fullName>
    <description>This field used to hold place Name of the object</description>
    <label>Place Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>