force-app/main/default/objects/PlacesFromPostalCode__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>This is used to hold the postal code for places object</description>
    <inlineHelpText>This is used to hold the postal code for places object</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>