force-app/main/default/objects/PlacesFromPostalCode__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>In this  field we will store statue</description>
    <inlineHelpText>In this  field we will store statue</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>