force-app/main/default/objects/PlacesFromPostalCode__c/fields/StateAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>StateAbbreviation__c</fullName>
    <description>This holds the state Abbreviaition</description>
    <label>State Abbreviation</label>
    <length>6</length>
    <type>Text</type>
</CustomField>